# JustSayIt

./: .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
config/: default_config.yaml
src/justsayit/: __init__.py  main.py
src/justsayit/config/: __init__.py  loader.py  schema.py
src/justsayit/core/: __init__.py  audio_manager.py  text_capture.py  tts_engine.py
src/justsayit/hotkeys/: __init__.py
src/justsayit/ui/: __init__.py
src/justsayit/utils/: __init__.py  models.py  platform.py
tests/: __init__.py
tests/integration/: test_tts_pipeline.py
tests/unit/: test_config.py
